ui alignments issue fixes

--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -211,15 +211,15 @@ $btnSquaresizes: "xs" 1.5rem 1.5rem 1rem null, "normal" 4rem 4rem 0.75rem null,
 
 // Buttons with icon
 .sb-right-icon-btn {
-  padding: ($base-block-space * 1) ($base-block-space * 1)
-    ($base-block-space * 1) ($base-block-space * 2);
+  padding: $base-block-space $base-block-space $base-block-space
+    $base-block-space;
   i.icon {
     margin-left: $base-block-space;
     margin-right: 0;
   }
   html[dir="rtl"] & {
-    padding: ($base-block-space * 1) ($base-block-space * 2)
-      ($base-block-space * 1) ($base-block-space * 2);
+    padding: $base-block-space $base-block-space $base-block-space
+      $base-block-space;
     i.icon {
       margin-left: 0;
       margin-right: $base-block-space;
@@ -227,22 +227,22 @@ $btnSquaresizes: "xs" 1.5rem 1.5rem 1rem null, "normal" 4rem 4rem 0.75rem null,
   }
 }
 .sb-left-icon-btn {
-  padding: ($base-block-space * 1) ($base-block-space * 2)
-    ($base-block-space * 1) ($base-block-space * 1);
+  padding: $base-block-space $base-block-space $base-block-space
+    $base-block-space;
   i.icon {
     margin-right: $base-block-space;
   }
   html[dir="rtl"] & {
-    padding: ($base-block-space * 1) ($base-block-space * 2)
-      ($base-block-space * 1) ($base-block-space * 1);
+    padding: $base-block-space $base-block-space $base-block-space
+      $base-block-space;
     i.icon {
       margin-left: $base-block-space;
     }
   }
 }
 .sb-left-icon-btn.sb-btn-xs {
-  padding: ($base-block-space * 0) ($base-block-space * 1)
-    ($base-block-space * 0) ($base-block-space * 1);
+  padding: $base-block-space $base-block-space $base-block-space
+    $base-block-space;
 }
 
 //Buttons toggle
